tests/specs/ecosystem/zone_x/zone_x/0_1_0.test
zone-x/zone-x/0.1.0
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/src/index.ts
error: TS2304 [ERROR]: Cannot find name 'TimeZone'.
export function getUsersTimeZone(): TimeZone {
                                    ~~~~~~~~
    at file://<tmpdir>/src/index.ts:1:37

TS2304 [ERROR]: Cannot find name 'TimeZone'.
export function setUserTimeZone(timeZone: TimeZone): string {
                                          ~~~~~~~~
    at file://<tmpdir>/src/index.ts:4:43

Found 2 errors.

